--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@
   border: 1px solid #37c2d8;
 }
 .modal {
+  background-color: rgba(0, 0, 0, 0.3);
   display: none;
   height: 100%;
   position: fixed;
@@ -35,13 +36,12 @@
   border: 1px solid #777;
   border-radius: 5px;
   box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  height: 100px;
-  left: calc(50% - 250px);
+  left: calc(50% - 240px);
   margin: 0 auto;
-  padding: 20px 50px 20px 50px;
+  padding: 20px;
   position: fixed;
   top: calc(50% - 100px);
-  width: 400px;
+  width: 440px;
 }
 .close-button {
   border: 1px solid #999;
