--- a/src/style.css
+++ b/src/style.css
@@ -23,12 +23,17 @@
   border: 1px solid #37c2d8;
 }
 .modal {
-  background-color: rgba(0, 0, 0, 0.3);
-  display: none;
+  background-color: rgba(0,0,0, 0.3);
   height: 100%;
   position: fixed;
   top: 0; left: 0;
   width: 100%;
+  opacity: 0;
+  z-index: -1;
+  transition: all 200ms ease-in-out;
+}
+.modal.is-open {
+  opacity: 1;
   z-index: 1;
 }
 .modal-body{
@@ -43,6 +48,11 @@
   position: fixed;
   width: 440px;
   overflow: hidden;
+  transform: translate(0px, -50px);
+  transition: all 300ms ease-in-out;
+}
+.is-open .modal-body {
+  transform: translate(0px, 0px);
 }
 .close-button {
   border: 1px solid #999;
